# miscord

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile.server  LATENCY.md  README.md  TEXT_PLAN.md  THREADS_PLAN.md  dev-start.sh  docker-compose.yml
.github/workflows/: ci.yml
crates/miscord-client/: Cargo.toml
crates/miscord-client/examples/: gst_test.rs
crates/miscord-client/src/: lib.rs  main.rs
crates/miscord-client/src/media/: audio.rs  audio_player.rs  capture.rs  gst_encoder.rs  gst_video.rs  mod.rs  screen.rs  sfu_client.rs  vad.rs  video.rs
crates/miscord-client/src/network/: api.rs  mod.rs  websocket.rs
crates/miscord-client/src/state/: app_state.rs  auth.rs  mod.rs  settings.rs
crates/miscord-client/src/ui/: app.rs  channel_list.rs  chat.rs  community_list.rs  gif_picker.rs  login.rs  main_view.rs  markdown.rs  member_list.rs  message.rs  message_search.rs  mod.rs  quick_switcher.rs  screen_picker.rs  server_list.rs  settings.rs  theme.rs  thread_panel.rs  voice.rs  voice_channel_view.rs
crates/miscord-media/: Cargo.toml
crates/miscord-media/src/: audio.rs  codec.rs  lib.rs
crates/miscord-protocol/: Cargo.toml
crates/miscord-protocol/src/: lib.rs  messages.rs  types.rs
crates/miscord-server/: Cargo.toml
crates/miscord-server/migrations/: 20240101000000_initial.sql  20250109000000_add_threads.sql  20250110000000_add_channel_read_state.sql  20250111000000_attachment_nullable_message.sql  20250112000000_add_pinned_messages.sql
crates/miscord-server/src/: error.rs  lib.rs  main.rs  state.rs
crates/miscord-server/src/api/: attachments.rs  auth.rs  channels.rs  communities.rs  messages.rs  mod.rs  opengraph.rs  servers.rs  tenor.rs  users.rs
crates/miscord-server/src/auth/: mod.rs
crates/miscord-server/src/db/: mod.rs
crates/miscord-server/src/models/: channel.rs  community.rs  message.rs  mod.rs  server.rs  user.rs
crates/miscord-server/src/services/: attachment.rs  channel.rs  message.rs  mod.rs  user.rs
crates/miscord-server/src/sfu/: mod.rs  session.rs  track_router.rs
crates/miscord-server/src/webrtc/: mod.rs
crates/miscord-server/src/ws/: connections.rs  handler.rs  mod.rs
crates/miscord-server/tests/: integration_tests.rs
scripts/: client-alice.sh  client-bob.sh  dev-full.sh  dev-server.sh  seed-dev-data.sh
