[package]
name = "miscord-client"
description = "Desktop client for Miscord with voice, video, and screen sharing"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "miscord"

[[bin]]
name = "miscord"
path = "src/main.rs"

# NOTE: sfu-test binary temporarily disabled - API has changed
# [[bin]]
# name = "sfu-test"
# path = "src/bin/sfu_test.rs"

[dependencies]
# Workspace dependencies
miscord-protocol = { workspace = true }
miscord-media = { workspace = true }

# Async runtime
tokio = { workspace = true }

# GUI
eframe = { workspace = true }
egui = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# WebRTC
webrtc = { workspace = true }

# Media capture
nokhwa = { workspace = true }
turbojpeg = { workspace = true }

# GStreamer for video
gstreamer = { workspace = true }
gstreamer-app = { workspace = true }
gstreamer-video = { workspace = true }

# Audio
cpal = { workspace = true }
opus = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
regex = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Futures
futures = "0.3"

# Settings persistence
dirs = "5"

# Screen capture - xcap has compilation issues, using GStreamer instead
# xcap = "0.0.14"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Media_MediaFoundation",
] }

[dev-dependencies]
tokio-test = "0.4"
