[package]
name = "miscord-media"
description = "Media processing utilities for Miscord (codecs, audio processing)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
webrtc = { workspace = true }
cpal = { workspace = true }
opus = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific media dependencies
v4l = "0.14"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows Media Foundation bindings
windows = { version = "0.59", features = [
    "Win32_Media_MediaFoundation",
    "Win32_Media_DirectShow",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS AVFoundation via core-foundation
core-foundation = "0.10"
